--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <div class="col-md-6 col-md-offset-6 text-column">
                 <h2>About Us</h2>
                 <h3>A taste of relaxtion</h3>
-                <p>We source high quality teas from all over the world and deliver them to your front door step.  Our teas are fresh, full of flavor and can be steeped multiple times at a times guaranteed to leave you feeling refreshed.  So what are you waiting for?  Come travel the world with us one cup at a time.</p>
+                <p>We source high quality teas from all over the world and deliver them to your front door.  Our teas are fresh, full of flavor and can be steeped multiple times guaranteed to leave you feeling refreshed.  So what are you waiting for?  Come travel the world with us one cup at a time.</p>
                 <h3>What's in the box</h3>
                 <ul>
                     <li>Premium teas</li>
